deployments/kubernetes/rcon-client.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rcon-web-admin
  labels:
    app: rcon-web-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rcon-web-admin
  namespace: rcon-web-admin
  labels:
    app: rcon-web-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rcon-web-admin
  template:
    metadata:
      labels:
        app: rcon-web-admin
    spec:
      containers:
        - name: rcon-web-admin
          image: itzg/rcon
          ports:
            - name: ui
              containerPort: 4326
            - name: ws
              containerPort: 4327
          volumeMounts:
            - mountPath: /opt/rcon-web-admin/db
              name: rcon-web-admin-volume
      volumes:
        - name: rcon-web-admin-volume
          persistentVolumeClaim:
            claimName: rcon-web-admin-db
---
apiVersion: v1
kind: Service
metadata:
  name: rcon-web-admin
  namespace: rcon-web-admin
  labels:
    app: rcon-web-admin
spec:
  ports:
    - name: http
      port: 80
      targetPort: ui
    - name: ws
      port: 8080
      targetPort: ws
  selector:
    app: rcon-web-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rcon-web-admin
  namespace: rcon-web-admin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
   - hosts:
       - rcon.dotku.ro
       - ws.rcon.dotku.ro
     secretName: rcon-web-admin-tls
  rules:
    - host: ws.rcon.dotku.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rcon-web-admin
                port:
                  name: ws
    - host: rcon.dotku.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rcon-web-admin
                port:
                  name: http
